# stws

./: CHANGELOG.md  LICENSE  README.md  flake.nix  run  stws.cabal
app/: Main.hs
