cabal-version: 3.0
name: stws
version: 0.1.0.0
synopsis: Simple static web server
-- A longer description of the package.
-- description:
license: MIT
license-file: LICENSE
author: Dmitriy Smolin
maintainer: dimsmol@gmail.com
-- A copyright notice.
-- copyright:
category: Web
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:
common ghc_options
  ghc-options:
    -Werror
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -threaded
    -fwrite-ide-info

common ghc_options_exe
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

executable stws
  import: ghc_options, ghc_options_exe
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base ^>=4.18.2.1,
    directory,
    filepath,
    scotty,
    wai-extra,
    wai-middleware-static,

  hs-source-dirs: app
  default-language: GHC2021
